# dogs-as-a-service-pipeline

./: .gitignore  CLAUDE.md  README.md  dbt_project.yml  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.dbt/: dbt_cloud.yml.example  profiles.yml.example
.github/workflows/: deploy-prod.yml  pr-tests.yml
.streamlit/: secrets.toml.example
analyses/: breed_insights.sql
docs/: API_REFERENCE.md  ARCHITECTURE.md  DATASET_STRUCTURE.md  DEPLOYMENT.md  FILE_STRUCTURE.md  PROJECT_OVERVIEW.md  SETUP_GUIDE.md
frontend/: filters.py  finder.py  overview.py
macros/: generate_schema_name.sql
models/: sources.yml
models/marts/core/: dim_breeds.sql  dim_temperament.sql  fct_breed_metrics.sql  schema.yml
models/staging/: schema.yml  stg_dog_breeds.sql
src/: dog_api_pipeline.py
src/.dlt/: config.toml  secrets.toml.template
tests/: assert_breed_consistency_across_models.sql
